--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Coin Flip</title>
+    <link rel="icon" href="heads.png" type="image/icon type">
   </head>
   <body>
     <div>
-      <div id="outcome">Flip the coin!</div>
+      <div id="outcome">Flip it!</div>
       <div class="scene">
         <div class="card" id="card" onclick="coinFlip()">
           <div class="card__face card__face--front"></div>
